# coffee-webui

./: .gitignore  Cargo.toml  Makefile  PASSWORDS.md  README.md  build.rs  flake.nix  package-lock.json  package.json
migrations/: 20250922163334_create_orders.sql
src/: main.rs
templates/: base.html  error.html  index.html  main.ts  style.css
